--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
     "dev": "svelte-kit dev --port 5000 --host",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "~2.3.1",
     "prettier-plugin-svelte": "^2.3.1",
-    "svelte": "^3.38.2"
+    "svelte": "^3.38.3",
+    "svelte-check": "^2.2.0",
+    "svelte-preprocess": "^4.7.3",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.4"
   },
   "type": "module",
   "dependencies": {
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.0.2",
     "sveltestrap": "^5.2.1"
   }
 }
