--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "type": "module",
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "sveltestrap": "^5.2.1"
   }
 }
