--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "preact": "^10.5.13",
     "prettier": "~2.3.1",
     "prettier-plugin-svelte": "^2.3.1",
     "svelte": "^3.38.3",
@@ -30,6 +31,8 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "gridjs": "^5.0.2",
+    "gridjs-svelte": "^1.2.0",
     "pattern.css": "^1.0.0",
     "sveltestrap": "^5.2.1"
   }
